k8s/staging/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-staging-controller
  namespace: chatwoot-staging
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector: {}
